--- a/_config.yml
+++ b/_config.yml
@@ -6,21 +6,21 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Gaitin # ex. I m Chuan
-name: 个人博客 # ex. DONGChuan
+title: Gaitin 
+name: 个人博客 
 email: 706182625@qq.com
-location: Beijing # ex. Nice, France
+location: Beijing 
 company:  Beijing Syswin Interconnected technology
 company_url: http://www.toon.mobi/
-github_url: https://github.com/Gaitin # ex. https://github.com/DONGChuan
+github_url: https://github.com/Gaitin 
 description: 个人博客
-favicon: favicon.png # Image must be in assets/images
-repository: https://github.com/Gaitin/gaitin.github.io # ex. DONGChuan/DONGChuan.github.io
+favicon: favicon.png
+repository: https://github.com/Gaitin/gaitin.github.io 
 
 # The base hostname & protocol for your site
 # For local test, please use http://localhost:4000
-# For production, use your github page url. ex. http://dongchuan.github.io
-url: https://gaitin.github.io/
+# For production, use your github page url. ex. https://gaitin.github.io/
+url:https://gaitin.github.io/
 
 ## Gem
 gems:
@@ -86,7 +86,6 @@ analytics :
 
 
 # For about.html. Fell free to create your own!
-skill_software_keywords: [Java, C, C++, Qt, Python, MySQL, Oracle, SQLite, PL/SQL, Design Patterns]
-skill_j2ee_keywords: [Spring, Struct, Hibernet, MyBatis, JSP]
-skill_web_keywords: [HTML, CSS, JS, JQuery, Ajax, AngularJS, NodeJS, ExpressJS, MongoDB, Redis, PHP, Symfony, Boostrap]
-skill_mobile_app_keywords: [Android, Sketch UI Desgin]
+skill_software_keywords: [Java,MySQL, Design Patterns]
+skill_web_keywords: [HTML, CSS, JS, JQuery, Ajax, Boostrap,React,Vue,Redux,dva,Weex,antd]
+skill_mobile_app_keywords: [React Native, Sketch UI Desgin]
